--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgba(112, 112, 204);
+  background-color: rgb(255, 255, 255);
   background-size: 100% 100%;
 }
 img.portrait {
@@ -23,7 +23,9 @@ img.portrait {
   background-size: 20px;
 }
 .panel {
+  background-color: rgba(125, 125, 241, 0.527);
   width: 250px;
+  height: 100vh;
   position: fixed;
   z-index: 1;
   top: 300;
@@ -31,17 +33,5 @@ img.portrait {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-}
-.panel-over {
-  width: 250px;
-  height: 400px;
-  position: fixed;
-  z-index: 1;
-  top: 300;
-  left: 25px;
-  overflow-x: hidden;
-  transition: 0.5s;
-
-  padding-top: 60px;
-  background-color: rgba(112, 112, 204);
+  float: left;
 }
