--- a/css/styles.css
+++ b/css/styles.css
@@ -27,11 +27,56 @@ img.portrait {
   width: 250px;
   height: 100vh;
   position: fixed;
-  z-index: 1;
-  top: 300;
-  left: 25px;
+  z-index: 5;
+  top: 0vh;
+  left: -270px;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+  padding: 10px;
   float: left;
 }
+.panel_arrow {
+  background-color: rgba(4, 4, 255, 0.527);
+  top: 0vh;
+  left: 0px;
+  padding: 5px;
+  position: fixed;
+  z-index: 10;
+  transition: 0.5s;
+  font-size: 50px;
+  font-weight: bold;
+  color: green;
+  cursor: pointer;
+}
+.main_page {
+  background-color: rgba(255, 0, 0, 0.24);
+  z-index: 1;
+  max-width: 100vw;
+  vertical-align: middle;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  padding: 10px;
+  padding-left: 50px;
+  transition: 0.5s;
+}
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-github:before {
+  content: "\eab0";
+}
+.icon-linkedin:before {
+  content: "\eac9";
